Style: Thymeleaf를 이용해 컴포넌트화
- fragments 폴더에 header.html, bodyHeader.html, nav.html, info.html, footer.html을 만들어 컴포넌트화
- 디자인 및 문구 수정

Related to: #2, #6

--- a/src/main/resources/static/css/style.scss
+++ b/src/main/resources/static/css/style.scss
@@ -788,6 +788,10 @@ a:focus {
                 }
             }
         }
+        hr {
+            border-top: 1px solid white;
+            margin: 5px 0;
+        }
     }
 
     .info_link-box {
@@ -827,6 +831,8 @@ a:focus {
         }
     }
 }
+
+
 
 /* end info section */
 
