--- a/src/main/resources/templates/members/createMemberForm.html
+++ b/src/main/resources/templates/members/createMemberForm.html
@@ -1,118 +1,19 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 
-<head>
-    <!-- Basic -->
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <!-- Mobile Metas -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <!-- Site Metas -->
-    <meta name="keywords" content=""/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
-
-    <title>UVIN</title>
-
-    <!-- slider stylesheet -->
-    <link rel="stylesheet" type="text/css"
-          href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css"/>
-
-    <!-- bootstrap core css -->
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap.css"/>
-
-    <!-- fonts style -->
-    <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Dosis:400,600,700|Poppins:400,600,700&display=swap"
-          rel="stylesheet"/>
-    <!-- Custom styles for this template -->
-    <link href="/css/style.css" rel="stylesheet"/>
-    <!-- responsive style -->
-    <link href="/css/responsive.css" rel="stylesheet"/>
+<head th:replace="fragments/header :: header">
 </head>
+
 
 <body class="sub_page about_page">
 <div class="hero_area">
     <!-- header section strats -->
-    <header class="header_section">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg custom_nav-container">
-                <a class="navbar-brand" href="/">
-                    <img src="/images/logo.png" alt=""/>
-                    <span>
-              UVIN.
-            </span>
-                </a>
-                <div class="contact_nav" id="">
-                    <ul class="navbar-nav ">
-                        <li class="nav-item">
-                            <a class="nav-link" href="service.html">
-                                <img src="/images/location.png" alt=""/>
-                                <span>위치</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="service.html">
-                                <img src="/images/call.png" alt=""/>
-                                <span>연락처 : 010 7102 5521</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="service.html">
-                                <img src="/images/envelope.png" alt=""/>
-                                <span>pch5521@gmail.com</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
+    <div th:replace="fragments/bodyHeader :: bodyHeader"></div>
 
-    </header>
     <!-- end header section -->
     <!-- slider section -->
     <section class=" slider_section position-relative">
-        <div class="container">
-            <div class="custom_nav2">
-                <nav class="navbar navbar-expand-lg custom_nav-container ">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarSupportedContent"
-                            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <div class="d-flex  flex-column flex-lg-row align-items-center">
-                            <ul class="navbar-nav  ">
-                                <li class="nav-item ">
-                                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-                                </li>
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="/items/new">상품등록 </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/items">상품목록 </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/order">상품주문</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/orders">주문내역</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/members/new">회원가입</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/members">회원목록</a>
-                                </li>
-                            </ul>
-                            <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-                            </form>
-                        </div>
-                    </div>
-                </nav>
-            </div>
-        </div>
+        <div th:replace="/fragments/nav :: nav"></div>
     </section>
     <!-- end slider section -->
 </div>
@@ -150,128 +51,14 @@
 <!-- info section -->
 
 <section class="info_section layout_padding2-top">
-    <div class="container">
-        <div class="info_form">
-            <h4>
-                제품 관련 문의
-            </h4>
-            <form action="">
-                <input type="text" placeholder="Enter your email">
-                <div class="d-flex justify-content-end">
-                    <button>
-                        보내기
-                    </button>
-                </div>
-            </form>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3">
-                <h6>
-                    ABOUT UVIN
-                </h6>
-                <p>
-                    UVIN은 Ur Vintage의 줄임말으로, 2023년에 설립된 빈티지 구제 쇼핑몰.<br/>
-                    제2의 당근마켓을 꿈꾸며 성장한다.
-                </p>
-            </div>
-            <div class="col-md-4 offset-md-2">
-                <h6>
-                    메뉴
-                </h6>
-                <ul>
-                    <li class=" active">
-                        <a class="" href="/">H &nbsp;o &nbsp;m &nbsp;e <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="">
-                        <a class="" href="/items/new">상 품 &nbsp;등 록</a>
-                    </li>
-                    <li class="">
-                        <a class="" href="/items">상 품 &nbsp;목 록</a>
-                    </li>
-                    <li class="">
-                        <a class="" href="/order">상 품 &nbsp;주 문</a>
-                    </li>
-                    <li class="">
-                        <a class="" href="/orders">주 문 &nbsp;내 역</a>
-                    </li>
-                    <li class="">
-                        <a class="" href="/members/new">회 원 &nbsp;가 입</a>
-                    </li>
-                    <li class="">
-                        <a class="" href="/members">회 원 &nbsp;목 록</a>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="col-md-3">
-                <h6>
-                    Contact Us
-                </h6>
-                <div class="info_link-box">
-                    <a href="">
-                        <img src="/images/location-white.png" alt="">
-                        <span> 부산광역시 부산진구 전포대로155</span>
-                    </a>
-                    <a href="">
-                        <img src="/images/call-white.png" alt="">
-                        <span>010 7102 5521/span>
-                    </a>
-                    <a href="">
-                        <img src="/images/mail-white.png" alt="">
-                        <span> pch5521@gmail.com</span>
-                    </a>
-                </div>
-                <div class="info_social">
-                    <div>
-                        <a href="https://github.com/p-r-a-o">
-                            <img src="/images/github-logo-button.png" alt="">
-                        </a>
-                    </div>
-                    <div>
-                        <a href="">
-                            <img src="/images/gmail-logo-button.png" alt="">
-                        </a>
-                    </div>
-                    <div>
-                        <a href="">
-                            <img src="/images/tistory-logo-button.png" alt="">
-                        </a>
-                    </div>
-                    <div>
-                        <a href="">
-                            <img src="/images/instagram.png" alt="">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div th:replace="/fragments/info :: info"></div>
 </section>
 
 <!-- end info section -->
 
 
 <!-- footer section -->
-<section class="container-fluid footer_section ">
-    <p>
-        <a href="https://github.com/p-r-a-o">&copy; Copyright 2023.DEV_PRAO ALL RIGHTS RESERVED.</a>
-    </p>
-</section>
-<!-- footer section -->
-
-<script type="/text/javascript" src="/js/jquery-3.4.1.min.js"></script>
-<script type="/text/javascript" src="/js/bootstrap.js"></script>
-
-<script>
-    function openNav() {
-        document.getElementById("myNav").classList.toggle("menu_width");
-        document
-            .querySelector(".custom_menu-btn")
-            .classList.toggle("menu_btn-style");
-    }
-</script>
+<div th:replace="fragments/footer :: footer"></div>
 </body>
 
 </html>
