--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,110 +1,23 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <div class="footer" th:fragment="footer">
-  <!-- FOOTER -->
-  <footer id="footer">
-    <!-- top footer -->
-    <div class="section">
-      <!-- container -->
-      <div class="container">
-        <!-- row -->
-        <div class="row">
-          <div class="col-md-3 col-xs-6">
-            <div class="footer">
-              <h3 class="footer-title">About Us</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                ut.</p>
-              <ul class="footer-links">
-                <li><a href="#"><i class="fa fa-map-marker"></i>1734 Stonecoal Road</a></li>
-                <li><a href="#"><i class="fa fa-phone"></i>+021-95-51-84</a></li>
-                <li><a href="#"><i class="fa fa-envelope-o"></i>email@email.com</a></li>
-              </ul>
-            </div>
-          </div>
+  <!-- footer section -->
+  <section class="container-fluid footer_section ">
+    <p>
+      <a href="https://github.com/p-r-a-o">&copy; Copyright 2023.DEV_PRAO ALL RIGHTS RESERVED.</a>
+    </p>
+  </section>
+  <!-- footer section -->
 
-          <div class="col-md-3 col-xs-6">
-            <div class="footer">
-              <h3 class="footer-title">Categories</h3>
-              <ul class="footer-links">
-                <li><a href="#">Hot deals</a></li>
-                <li><a href="#">Laptops</a></li>
-                <li><a href="#">Smartphones</a></li>
-                <li><a href="#">Cameras</a></li>
-                <li><a href="#">Accessories</a></li>
-              </ul>
-            </div>
-          </div>
+  <script type="/text/javascript" src="/js/jquery-3.4.1.min.js"></script>
+  <script type="/text/javascript" src="/js/bootstrap.js"></script>
 
-          <div class="clearfix visible-xs"></div>
-
-          <div class="col-md-3 col-xs-6">
-            <div class="footer">
-              <h3 class="footer-title">Information</h3>
-              <ul class="footer-links">
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Orders and Returns</a></li>
-                <li><a href="#">Terms & Conditions</a></li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="col-md-3 col-xs-6">
-            <div class="footer">
-              <h3 class="footer-title">Service</h3>
-              <ul class="footer-links">
-                <li><a href="#">My Account</a></li>
-                <li><a href="#">View Cart</a></li>
-                <li><a href="#">Wishlist</a></li>
-                <li><a href="#">Track My Order</a></li>
-                <li><a href="#">Help</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <!-- /row -->
-      </div>
-      <!-- /container -->
-    </div>
-    <!-- /top footer -->
-
-    <!-- bottom footer -->
-    <div id="bottom-footer" class="section">
-      <div class="container">
-        <!-- row -->
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <ul class="footer-payments">
-              <li><a href="#"><i class="fa fa-cc-visa"></i></a></li>
-              <li><a href="#"><i class="fa fa-credit-card"></i></a></li>
-              <li><a href="#"><i class="fa fa-cc-paypal"></i></a></li>
-              <li><a href="#"><i class="fa fa-cc-mastercard"></i></a></li>
-              <li><a href="#"><i class="fa fa-cc-discover"></i></a></li>
-              <li><a href="#"><i class="fa fa-cc-amex"></i></a></li>
-            </ul>
-            <span class="copyright">
-								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-								Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i
-                    class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com"
-                                                                        target="_blank">Colorlib</a>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-							</span>
-          </div>
-        </div>
-        <!-- /row -->
-      </div>
-      <!-- /container -->
-    </div>
-    <!-- /bottom footer -->
-  </footer>
-  <!-- /FOOTER -->
-
-  <!-- jQuery Plugins -->
-  <script src="js/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/slick.min.js"></script>
-  <script src="js/nouislider.min.js"></script>
-  <script src="js/jquery.zoom.min.js"></script>
-  <script src="js/main.js"></script>
+  <script>
+    function openNav() {
+      document.getElementById("myNav").classList.toggle("menu_width");
+      document
+              .querySelector(".custom_menu-btn")
+              .classList.toggle("menu_btn-style");
+    }
+  </script>
 </div>
