--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -24,7 +24,10 @@
   <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Dosis:400,600,700|Poppins:400,600,700&display=swap"
         rel="stylesheet"/>
   <!-- Custom styles for this template -->
-  <link href="/css/style.css" rel="stylesheet"/>
+  <link href="/css/style.css?after" rel="stylesheet"/>
   <!-- responsive style -->
   <link href="/css/responsive.css" rel="stylesheet"/>
+  <!-- naver map v3 api -->
+  <script type="text/javascript"
+          src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=tlvdfciw0m"></script>
 </head>
