--- a/src/main/resources/templates/members/memberList.html
+++ b/src/main/resources/templates/members/memberList.html
@@ -1,12 +1,17 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header" />
-<body>
+<html xmlns:th = "http://www.thymeleaf.org">
+<head th:replace = "fragments/header :: header"/>
+<body class="sub_page about_page">
+<div class = "hero_area">
+    <div th:replace = "fragments/bodyHeader :: bodyHeader"></div>
+    <section class=" slider_section position-relative">
+        <div th:replace="/fragments/nav :: nav"></div>
+    </section>
+</div>
 
 <div class="container">
-    <div th:replace="fragments/bodyHeader :: bodyHeader" />
     <div>
-        <table class="table table-striped">
+        <table class = "table table-striped">
             <thead>
             <tr>
                 <th>#</th>
@@ -17,20 +22,24 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="member : ${members}">
-                <td th:text="${member.id}"></td>
-                <td th:text="${member.name}"></td>
-                <td th:text="${member.address?.city}"></td>
-                <td th:text="${member.address?.street}"></td>
-                <td th:text="${member.address?.zipcode}"></td>
+            <tr th:each = "member : ${members}">
+                <td th:text = "${member.id}"></td>
+                <td th:text = "${member.name}"></td>
+                <td th:text = "${member.address?.city}"></td>
+                <td th:text = "${member.address?.street}"></td>
+                <td th:text = "${member.address?.zipcode}"></td>
             </tr>
             </tbody>
         </table>
     </div>
+</div>
 
-    <div th:replace="fragments/footer :: footer" />
+<section class="info_section layout_padding2-top">
+    <div th:replace="/fragments/info :: info"></div>
+</section>
 
-</div> <!-- /container -->
+<div th:replace = "fragments/footer :: footer"></div>
+
 
 </body>
 </html>
