--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -76,6 +76,16 @@ body {
   height: auto;
 }
 
+.sub_page .container {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.sub_page .form-control {
+  width: 400px;
+  height: auto;
+}
+
 .sub_page .slider_section {
   background: none;
 }
