--- a/src/main/resources/templates/items/createItemForm.html
+++ b/src/main/resources/templates/items/createItemForm.html
@@ -1,11 +1,18 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:replace="fragments/header :: header"/>
-<body>
-
+<body class="sub_page">
+<div class="hero_area">
+    <!-- header section strats -->
+    <div th:replace="fragments/bodyHeader :: bodyHeader"></div>
+    <!-- end header section -->
+    <!-- slider section -->
+    <section class=" slider_section position-relative">
+        <div th:replace="/fragments/nav :: nav"></div>
+    </section>
+    <!-- end slider section -->
+</div>
 <div class="container">
-    <div th:replace="fragments/bodyHeader :: bodyHeader"/>
-
     <form th:action="@{/items/new}" th:object="${form}" method="post">
         <div class="form-group">
             <label th:for="name">상품명</label>
@@ -16,23 +23,34 @@
             <input type="number" th:field="*{price}" class="form-control" placeholder="가격을 입력하세요">
         </div>
         <div class="form-group">
+            <label th:for="brand">브랜드</label>
+            <input type="text" th:field="*{brand}" class="form-control" placeholder="브랜드명을 입력하세요">
+        </div>
+        <div class="form-group">
             <label th:for="stockQuantity">수량</label>
             <input type="number" th:field="*{stockQuantity}" class="form-control" placeholder="수량을 입력하세요">
         </div>
         <div class="form-group">
-            <label th:for="author">저자</label>
-            <input type="text" th:field="*{author}" class="form-control" placeholder="저자를 입력하세요">
+            <label th:for="size">사이즈</label>
+            <input type="number" th:field="*{size}" class="form-control" placeholder="사이즈를 입력하세요">
         </div>
         <div class="form-group">
-            <label th:for="isbn">ISBN</label>
-            <input type="text" th:field="*{isbn}" class="form-control" placeholder="ISBN을 입력하세요">
+            <label th:for="gender">성별</label>
+            <input type="text" th:field="*{gender}" class="form-control" placeholder="성별을 입력하세요">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <div class="form-group">
+            <label th:for="material">소재</label>
+            <input type="text" th:field="*{material}" class="form-control" placeholder="소재를 입력하세요">
+        </div>
+        <button type="submit" class="btn btn-primary">등록</button>
     </form>
     <br/>
-    <div th:replace="fragments/footer :: footer"/>
+</div>
+<section class="info_section layout_padding2-top">
+    <div th:replace="/fragments/info :: info"></div>
+</section>
+<div th:replace="fragments/footer :: footer"></div>
 
-</div> <!-- /container -->
 
 
 </body>
