--- a/src/main/resources/templates/items/itemList.html
+++ b/src/main/resources/templates/items/itemList.html
@@ -12,15 +12,15 @@
     </section>
     <!-- end slider section -->
 </div>
-<div class="container">
+<div class="sub_form">
     <div>
         <table class="table table-striped">
             <thead>
             <tr>
                 <th>#</th>
                 <th>상품명</th>
-                <th>가격</th>
                 <th>브랜드</th>
+                <th>가격</th>
                 <th>재고수량</th>
                 <th></th>
             </tr>
