--- a/src/main/resources/templates/items/updateItemForm.html
+++ b/src/main/resources/templates/items/updateItemForm.html
@@ -1,41 +1,54 @@
-<!--<!DOCTYPE HTML>-->
-<!--<html xmlns:th="http://www.thymeleaf.org">-->
-<!--<head th:replace="fragments/header :: header" />-->
-<!--<body>-->
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<head th:replace="fragments/header :: header" />
+<body class="sub_page">
+<div class="hero_area">
+    <!-- header section strats -->
+    <div th:replace="fragments/bodyHeader :: bodyHeader"></div>
+    <!-- end header section -->
+    <!-- slider section -->
+    <section class=" slider_section position-relative">
+        <div th:replace="/fragments/nav :: nav"></div>
+    </section>
+    <!-- end slider section -->
+</div>
+<div class="sub_form">
+    <form th:object="${form}" method="post" class="form-container">
+        <!-- id -->
+        <input type="hidden" th:field="*{id}" />
 
-<!--<div class="container">-->
-<!--    <div th:replace="fragments/bodyHeader :: bodyHeader"/>-->
+        <div class="form-group">
+            <label th:for="name">상품명</label>
+            <input type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력하세요">
+        </div>
+        <div class="form-group">
+            <label th:for="brand">브랜드</label>
+            <input type="text" th:field="*{brand}" class="form-control" placeholder="브랜드명을 입력하세요">
+        </div>
+        <div class="form-group">
+            <label th:for="price">가격</label>
+            <input type="number" th:field="*{price}" class="form-control" placeholder="가격을 입력하세요">
+        </div>
+        <div class="form-group">
+            <label th:for="stockQuantity">수량</label>
+            <input type="number" th:field="*{stockQuantity}" class="form-control" placeholder="수량을 입력하세요">
+        </div>
+        <div class="form-group">
+            <label th:for="size">사이즈</label>
+            <input type="number" th:field="*{size}" class="form-control" placeholder="사이즈를 입력하세요">
+        </div>
+        <div class="form-group">
+            <label th:for="material">소재</label>
+            <input type="text" th:field="*{material}" class="form-control" placeholder="소재를 입력하세요">
+        </div>
+        <button type="submit" class="btn btn-primary">등록</button>
+    </form>
+   <br/>
+</div> <!-- /container -->
+<section class="info_section layout_padding2-top">
+    <div th:replace="/fragments/info :: info"></div>
+</section>
+<div th:replace="fragments/footer :: footer"></div>
 
-<!--    <form th:object="${form}" method="post">-->
-<!--        &lt;!&ndash; id &ndash;&gt;-->
-<!--        <input type="hidden" th:field="*{id}" />-->
-
-<!--        <div class="form-group">-->
-<!--            <label th:for="name">상품명</label>-->
-<!--            <input type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력하세요" />-->
-<!--        </div>-->
-<!--        <div class="form-group">-->
-<!--            <label th:for="price">가격</label>-->
-<!--            <input type="number" th:field="*{price}" class="form-control" placeholder="가격을 입력하세요" />-->
-<!--        </div>-->
-<!--        <div class="form-group">-->
-<!--            <label th:for="stockQuantity">수량</label>-->
-<!--            <input type="number" th:field="*{stockQuantity}" class="form-control" placeholder="수량을 입력하세요" />-->
-<!--        </div>-->
-<!--        <div class="form-group">-->
-<!--            <label th:for="author">저자</label>-->
-<!--            <input type="text" th:field="*{author}" class="form-control"  placeholder="저자를 입력하세요" />-->
-<!--        </div>-->
-<!--        <div class="form-group">-->
-<!--            <label th:for="isbn">ISBN</label>-->
-<!--            <input type="text" th:field="*{isbn}" class="form-control"  placeholder="ISBN을 입력하세요" />-->
-<!--        </div>-->
-<!--        <button type="submit" class="btn btn-primary">Submit</button>-->
-<!--    </form>-->
-
-<!--    <div th:replace="fragments/footer :: footer" />-->
-
-<!--</div> &lt;!&ndash; /container &ndash;&gt;-->
-
-<!--</body>-->
-<!--</html>-->
+</body>
+</html>
