--- a/src/main/resources/templates/items/itemList.html
+++ b/src/main/resources/templates/items/itemList.html
@@ -1,20 +1,20 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head th:replace="fragments/header :: header"></head>
-<body class="sub_page">
-<div class="hero_area">
+<html xmlns:th = "http://www.thymeleaf.org" lang = "en">
+<head th:replace = "fragments/header :: header"></head>
+<body class = "sub_page">
+<div class = "hero_area">
     <!-- header section strats -->
-    <div th:replace="fragments/bodyHeader :: bodyHeader"></div>
+    <div th:replace = "fragments/bodyHeader :: bodyHeader"></div>
     <!-- end header section -->
     <!-- slider section -->
-    <section class=" slider_section position-relative">
-        <div th:replace="/fragments/nav :: nav"></div>
+    <section class = " slider_section position-relative">
+        <div th:replace = "/fragments/nav :: nav"></div>
     </section>
     <!-- end slider section -->
 </div>
-<div class="sub_form">
+<div class = "sub_form">
     <div>
-        <table class="table table-striped">
+        <table class = "table table-striped">
             <thead>
             <tr>
                 <th>#</th>
@@ -26,14 +26,15 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="item : ${items}">
-                <td th:text="${item.id}"></td>
-                <td th:text="${item.name}"></td>
-                <td th:text="${item.brand}"></td>
-                <td th:text="${item.price}"></td>
-                <td th:text="${item.stockQuantity}"></td>
+            <tr th:each = "item : ${items}">
+                <td th:text = "${item.id}"></td>
+                <td th:text = "${item.name}"></td>
+                <td th:text = "${item.brand}"></td>
+                <td th:text = "${item.price}"></td>
+                <td th:text = "${item.stockQuantity}"></td>
                 <td>
-                    <a href="#" th:href="@{/items/{id}/edit (id=${item.id})}" class="btn btn-primary" role="button">수정</a>
+                    <a href = "#" th:href = "@{/items/{id}/edit (id=${item.id})}" class = "btn btn-primary"
+                       role = "button">수정</a>
                 </td>
             </tr>
             </tbody>
@@ -42,10 +43,10 @@
 
 
 </div> <!-- /container -->
-<section class="info_section layout_padding2-top">
-    <div th:replace="/fragments/info :: info"></div>
+<section class = "info_section layout_padding2-top">
+    <div th:replace = "/fragments/info :: info"></div>
 </section>
-<div th:replace="fragments/footer :: footer"></div>
+<div th:replace = "fragments/footer :: footer"></div>
 
 </body>
 </html>
