--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -13,26 +13,26 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <div class="d-flex  flex-column flex-lg-row align-items-center">
                         <ul class="navbar-nav">
-                            <li class="nav-item active">
+                            <li class="nav-item" id="home">
                                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/items/new">상품등록 </a>
+                            <li class="nav-item" id="items-new">
+                                <a class="nav-link" href="/items/new">상품등록</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/items">상품목록 </a>
+                            <li class="nav-item" id="items">
+                                <a class="nav-link" href="/items">상품목록</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/order">상품주문 </a>
+                            <li class="nav-item" id="order">
+                                <a class="nav-link" href="/order">상품주문</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/orders">주문내역 </a>
+                            <li class="nav-item" id="orders">
+                                <a class="nav-link" href="/orders">주문내역</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/members/new">회원가입 </a>
+                            <li class="nav-item" id="members-new">
+                                <a class="nav-link" href="/members/new">회원가입</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/members">회원목록 </a>
+                            <li class="nav-item" id="members">
+                                <a class="nav-link" href="/members">회원목록</a>
                             </li>
                         </ul>
                         <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
