--- a/src/main/resources/templates/items/itemList.html
+++ b/src/main/resources/templates/items/itemList.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:th = "http://www.thymeleaf.org" lang = "en">
-<head th:replace = "fragments/header :: header"></head>
+<head th:replace = "fragments/header :: header"><title>UVIN</title></head>
 <body class = "sub_page">
 <div class = "hero_area">
     <!-- header section strats -->
@@ -12,7 +12,7 @@
     </section>
     <!-- end slider section -->
 </div>
-<div class = "sub_form">
+<div class = "container">
     <div>
         <table class = "table table-striped">
             <thead>
